2001-11-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* main.c (MAIN): add braces to avoid ambiguous `else'
	* main.c (set_buffer_environ): remove unused variables
	* linein.c (_rcompl): not EMACS_LIKE_LINEEDIT only
	* local.c (localcgi_get): remove unused variables
	* mailcap.c (unquote_mailcap_loop): remove unused variables
	* url.c (init_PRNG) add parentheses around assignment used as true value
	* url.c (parseURL): remove unsed label
	* url.c (parseURL2): remove unused variables
	* ftp.c (ftp_escape_str ftp_restore_str): remove not used functions
	* indep.c (getescapechar): remove unused variable
	
	* proto.h: add missin prototypes

2001-11-20  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* terms.c (skip_escseq): [w3m-dev 02447]
	  is_xterm && ESC [ M <ch> <ch> <ch>

2001-11-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* terms.c (mouse_init): Gpm_Close() is required.
	  closes: Debian Bug#120221: w3m-ssl: trashes terminal on exit

2001-11-20  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* XMakefile (funcname1.h funcname2.h): sort as well as funcname.c

2001-11-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* terms.c (xterm_mouse_term set_tty): add cygwin as xterm-style
	  mouse terminal

2001-11-19  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* main.c (GetWord): [w3m-dev 02436] fix segmentation fault in main.c
	  closes: #482763 segmentation fault in main.c

2001-11-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* gc/.cvsignore:
	  remove gctest, if_mach, if_not_there, threadlibs
	  closes: #482765 i386 binaries in gc directory

2001-11-17  Fumitoshi UKAI  <ukai@debian.or.jp>

	* configure: follow autoconf conventions
	  STRCASECMP -> HAVE_STRCASECMP
	  STRCHR -> HAVE_STRCHR
	  STRERROR -> HAVE_STRERROR
	  SYS_ERRLIST -> HAVE_SYS_ERRLIST
	  NOBCOPY -> HAVE_BCOPY
	  GETCWD -> HAVE_GETCWD
	  GETWD -> HAVE_GETWD
	  READLINK -> HAVE_READLINK (HAVE_LSTAT?)
	  TERMIO -> HAVE_TERMIO_H
	  TERMIOS -> HAVE_TERMIOS_H
	  SGTTY -> HAVE_SGTTY_H
	  DIRENT -> HAVE_DIRENT_H
	  NO_FLOAT_H -> HAVE_FLOAT_H