@@ -1,99 +1,0 @@
-#define nulcmd 0
-#define quitfm 1
-#define adBmark 2
-#define backBf 3
-#define goLineF 4
-#define ldBmark 5
-#define ctrCsrH 6
-#define ctrCsrV 7
-#define cooLst 8
-#define deletePrevBuf 9
-#define dictword 10
-#define dictwordat 11
-#define ldown1 12
-#define svSrc 13
-#define editBf 14
-#define editScr 15
-#define goLineL 16
-#define escbmap 17
-#define escmap 18
-#define execsh 19
-#define extbrz 21
-#define linkbrz 22
-#define rFrame 23
-#define goURL 24
-#define goLine 25
-#define followA 26
-#define ldhelp 27
-#define ldHist 28
-#define pginfo 29
-#define initMailcap 30
-#define susp 31
-#define col1L 32
-#define linbeg 33
-#define linend 34
-#define curlno 35
-#define topA 36
-#define lastA 37
-#define ldfile 38
-#define mainMn 39
-#define _mark 40
-#define chkNMID 41
-#define chkURL 42
-#define mouse 44
-#define msToggle 45
-#define movD 46
-#define movD1 47
-#define movL 48
-#define movL1 49
-#define movR 50
-#define movR1 51
-#define movU 52
-#define movU1 53
-#define msgs 54
-#define nextD 55
-#define nextL 56
-#define nextLU 57
-#define nextA 58
-#define nextMk 59
-#define pgFore 60
-#define nextR 61
-#define nextRD 62
-#define nextU 63
-#define movRW 64
-#define ldOpt 67
-#define pcmap 68
-#define curURL 69
-#define peekIMG 70
-#define peekURL 71
-#define pipeBuf 72
-#define pipesh 73
-#define prevA 74
-#define prevMk 75
-#define pgBack 76
-#define movLW 77
-#define svBuf 78
-#define qquitfm 79
-#define readsh 80
-#define rdrwSc 81
-#define reMark 82
-#define reload 83
-#define col1R 84
-#define svI 86
-#define svA 87
-#define srchfor 89
-#define srchbak 90
-#define srchnxt 92
-#define srchprv 93
-#define selBuf 94
-#define selMn 95
-#define setEnv 96
-#define setOpt 97
-#define shiftl 99
-#define shiftr 100
-#define vwSrc 101
-#define submitForm 102
-#define lup1 104
-#define dispVer 105
-#define followI 108
-#define wrapToggle 110
