@@ -1,5 +1,9 @@
 2001-11-20  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* XMakefile (clean): remove funcname.c funcname1.h funcname2.h
+	  these are autogenerated files.
+	* funcname.c funcname1.h funcname2.h: removed from CVS
+
 	* main.c (MAIN): add braces to avoid ambiguous `else'
 	* main.c (set_buffer_environ): remove unused variables
 	* linein.c (_rcompl): not EMACS_LIKE_LINEEDIT only
